--- a/index.html
+++ b/index.html
@@ -1,227 +1,165 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Web-Based Speedometer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div class="app-stage" data-app-stage>
-    <main class="app-surface" data-app-surface>
-      <header class="dashboard__header">
-        <h1>Web-Based Speedometer</h1>
-        <p class="tagline">Live telemetry with persistent performance tracking.</p>
-      </header>
+  <main class="dashboard">
+    <header class="dashboard__header">
+      <h1>Web-Based Speedometer</h1>
+      <p class="tagline">Live telemetry with persistent performance tracking.</p>
+    </header>
 
-      <section class="controls">
-        <div class="controls__stack">
-          <button id="start" type="button">Start Tracking</button>
-          <button id="reset-stats" type="button">Reset Stats</button>
+    <section class="controls">
+      <div class="controls__stack">
+        <button id="start" type="button">Start Tracking</button>
+        <button id="reset-stats" type="button">Reset Stats</button>
+      </div>
+
+      <div class="pager" aria-live="polite">
+        <button id="display-prev" class="pager__button" type="button" aria-label="Previous display">‹</button>
+        <div class="pager__status">
+          <span id="display-label" class="pager__label">Overview</span>
+          <small id="display-indicator" class="pager__indicator">1 / X</small>
         </div>
+        <button id="display-next" class="pager__button" type="button" aria-label="Next display">›</button>
+      </div>
+    </section>
 
-        <div class="pager" aria-live="polite">
-          <button id="display-prev" class="pager__button" type="button" aria-label="Previous display">‹</button>
-          <div class="pager__status">
-            <span id="display-label" class="pager__label">Overview</span>
-            <small id="display-indicator" class="pager__indicator">1 / X</small>
-          </div>
+    <section class="display-wrapper" data-display-carousel>
+      <div class="display-track" id="display-track">
 
-          <section class="display-wrapper" data-display-carousel>
-            <div class="display-track" id="display-track">
-
-              <!-- =========================
+        <!-- =========================
              OVERVIEW — POSITION PAGE
         ========================== -->
-              <article class="display-page" data-label="Position">
-                <h2 class="display-page__title">Position</h2>
-                <section class="card">
-                  <h3 class="card__title">Position</h3>
-                  <dl class="readout-list">
-                    <div class="readout">
-                      <dt>Latitude</dt>
-                      <dd id="lat">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Longitude</dt>
-                      <dd id="lon">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Heading</dt>
-                      <dd id="heading">--</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Position">
+          <h2 class="display-page__title">Position</h2>
+          <section class="card">
+            <h3 class="card__title">Position</h3>
+            <dl class="readout-list">
+              <div class="readout"><dt>Latitude</dt><dd id="lat">--</dd></div>
+              <div class="readout"><dt>Longitude</dt><dd id="lon">--</dd></div>
+              <div class="readout"><dt>Heading</dt><dd id="heading">--</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
              OVERVIEW — TRIP SUMMARY
         ========================== -->
-              <article class="display-page" data-label="Trip Summary">
-                <h2 class="display-page__title">Trip Summary</h2>
-                <section class="card">
-                  <h3 class="card__title">Trip Summary</h3>
-                  <dl class="readout-list">
-                    <div class="readout">
-                      <dt>Total Distance</dt>
-                      <dd id="distance-total">0.00 km / 0.00 mi</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Session Time</dt>
-                      <dd id="session-duration">00:00:00</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Trip Summary">
+          <h2 class="display-page__title">Trip Summary</h2>
+          <section class="card">
+            <h3 class="card__title">Trip Summary</h3>
+            <dl class="readout-list">
+              <div class="readout"><dt>Total Distance</dt><dd id="distance-total">0.00 km / 0.00 mi</dd></div>
+              <div class="readout"><dt>Session Time</dt><dd id="session-duration">00:00:00</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
              SPEED — INSTANT SPEED
         ========================== -->
-              <article class="display-page" data-label="Instant Speed">
-                <h2 class="display-page__title">Instant Speed</h2>
-                <section class="card">
-                  <h3 class="card__title">Instant Speed</h3>
-                  <dl class="readout-list">
-                    <div class="readout readout--highlight">
-                      <dt>Speed (m/s)</dt>
-                      <dd id="speed">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Speed (mph)</dt>
-                      <dd id="speed-mph">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Speed (km/h)</dt>
-                      <dd id="speed-kph">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Speed (knots)</dt>
-                      <dd id="speed-knots">--</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Instant Speed">
+          <h2 class="display-page__title">Instant Speed</h2>
+          <section class="card">
+            <h3 class="card__title">Instant Speed</h3>
+            <dl class="readout-list">
+              <div class="readout readout--highlight"><dt>Speed (m/s)</dt><dd id="speed">--</dd></div>
+              <div class="readout"><dt>Speed (mph)</dt><dd id="speed-mph">--</dd></div>
+              <div class="readout"><dt>Speed (km/h)</dt><dd id="speed-kph">--</dd></div>
+              <div class="readout"><dt>Speed (knots)</dt><dd id="speed-knots">--</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
              SPEED — HISTORICAL
         ========================== -->
-              <article class="display-page" data-label="Speed History">
-                <h2 class="display-page__title">Historical Speed Stats</h2>
-                <section class="card">
-                  <h3 class="card__title">Historical</h3>
-                  <dl class="readout-list">
-                    <div class="readout">
-                      <dt>Minimum (m/s)</dt>
-                      <dd id="speed-min">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Maximum (m/s)</dt>
-                      <dd id="speed-max">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Average (m/s)</dt>
-                      <dd id="speed-avg">--</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Speed History">
+          <h2 class="display-page__title">Historical Speed Stats</h2>
+          <section class="card">
+            <h3 class="card__title">Historical</h3>
+            <dl class="readout-list">
+              <div class="readout"><dt>Minimum (m/s)</dt><dd id="speed-min">--</dd></div>
+              <div class="readout"><dt>Maximum (m/s)</dt><dd id="speed-max">--</dd></div>
+              <div class="readout"><dt>Average (m/s)</dt><dd id="speed-avg">--</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
              PERFORMANCE — ACCEL
         ========================== -->
-              <article class="display-page" data-label="Acceleration">
-                <h2 class="display-page__title">Acceleration</h2>
-                <section class="card">
-                  <h3 class="card__title">Acceleration</h3>
-                  <dl class="readout-list">
-                    <div class="readout">
-                      <dt>Acceleration</dt>
-                      <dd id="accel">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Deceleration</dt>
-                      <dd id="decel">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Peak Accel</dt>
-                      <dd id="peak-accel">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>Peak Decel</dt>
-                      <dd id="peak-decel">--</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Acceleration">
+          <h2 class="display-page__title">Acceleration</h2>
+          <section class="card">
+            <h3 class="card__title">Acceleration</h3>
+            <dl class="readout-list">
+              <div class="readout"><dt>Acceleration</dt><dd id="accel">--</dd></div>
+              <div class="readout"><dt>Deceleration</dt><dd id="decel">--</dd></div>
+              <div class="readout"><dt>Peak Accel</dt><dd id="peak-accel">--</dd></div>
+              <div class="readout"><dt>Peak Decel</dt><dd id="peak-decel">--</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
              PERFORMANCE — TIMERS
         ========================== -->
-              <article class="display-page" data-label="Performance Timers">
-                <h2 class="display-page__title">Performance Timers</h2>
-                <section class="card">
-                  <h3 class="card__title">Performance Timers</h3>
-                  <dl class="readout-list">
-                    <div class="readout">
-                      <dt>¼ Mile Status</dt>
-                      <dd id="quarter-status">Standby</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>¼ Mile Last</dt>
-                      <dd id="quarter-last">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>¼ Mile Best</dt>
-                      <dd id="quarter-best">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>0-60 mph Last</dt>
-                      <dd id="zero-sixty-last">--</dd>
-                    </div>
-                    <div class="readout">
-                      <dt>0-60 mph Best</dt>
-                      <dd id="zero-sixty-best">--</dd>
-                    </div>
-                  </dl>
-                </section>
-              </article>
+        <article class="display-page" data-label="Performance Timers">
+          <h2 class="display-page__title">Performance Timers</h2>
+          <section class="card">
+            <h3 class="card__title">Performance Timers</h3>
+            <dl class="readout-list">
+              <div class="readout"><dt>¼ Mile Status</dt><dd id="quarter-status">Standby</dd></div>
+              <div class="readout"><dt>¼ Mile Last</dt><dd id="quarter-last">--</dd></div>
+              <div class="readout"><dt>¼ Mile Best</dt><dd id="quarter-best">--</dd></div>
+              <div class="readout"><dt>0-60 mph Last</dt><dd id="zero-sixty-last">--</dd></div>
+              <div class="readout"><dt>0-60 mph Best</dt><dd id="zero-sixty-best">--</dd></div>
+            </dl>
+          </section>
+        </article>
 
-              <!-- =========================
+        <!-- =========================
                HUD MIRROR
         ========================== -->
-              <article class="display-page display-page--mirror" data-label="HUD Mirror">
-                <div class="mirror-display">
-                  <p class="mirror-display__intro">Mirrored HUD for windshield reflections.</p>
-                  <div class="mirror-display__metrics">
-                    <div class="mirror-display__metric mirror-display__metric--kph">
-                      <span class="mirror-display__label">KPH</span>
-                      <span class="mirror-display__value" id="mirror-speed-kph">--</span>
-                    </div>
-                    <div class="mirror-display__metric mirror-display__metric--mph">
-                      <span class="mirror-display__label">MPH</span>
-                      <span class="mirror-display__value" id="mirror-speed-mph">--</span>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
+        <article class="display-page display-page--mirror" data-label="HUD Mirror">
+          <div class="mirror-display">
+            <p class="mirror-display__intro">Mirrored HUD for windshield reflections.</p>
+            <div class="mirror-display__metrics">
+              <div class="mirror-display__metric mirror-display__metric--kph">
+                <span class="mirror-display__label">KPH</span>
+                <span class="mirror-display__value" id="mirror-speed-kph">--</span>
+              </div>
+              <div class="mirror-display__metric mirror-display__metric--mph">
+                <span class="mirror-display__label">MPH</span>
+                <span class="mirror-display__value" id="mirror-speed-mph">--</span>
+              </div>
             </div>
-          </section>
+          </div>
+        </article>
 
-          <section class="display-upload">
-            <h2>Custom Displays</h2>
-            <p>Upload HTML/CSS/JS to create additional pages.</p>
-            <label class="upload-button">
-              <input id="display-upload" type="file" accept=".html,.htm,.css,.js" multiple>
-              <span>Upload Display Files</span>
-            </label>
-            <ul class="upload-list" id="custom-display-list" aria-live="polite"></ul>
-          </section>
-    </main>
+      </div>
+    </section>
 
-    <script src="script.js"></script>
+    <section class="display-upload">
+      <div>
+        <h2>Custom Displays</h2>
+        <p>Upload HTML/CSS/JS to create additional pages.</p>
+      </div>
+      <label class="upload-button">
+        <input id="display-upload" type="file" accept=".html,.htm,.css,.js" multiple>
+        <span>Upload Display Files</span>
+      </label>
+      <ul class="upload-list" id="custom-display-list" aria-live="polite"></ul>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
